# hm_27

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
ads/: models.py  views.py
ads/migrations/: 0001_initial.py
categories/: models.py  views.py
categories/migrations/: 0001_initial.py
hm_27/: asgi.py  settings.py  urls.py  wsgi.py
