[tool.poetry]
name = "hm-27"
version = "0.1.0"
description = ""
authors = ["KroFly03 <krofly03@mail.ru>"]
readme = "README.md"
packages = [{include = "hm_27"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
marshmallow = "3.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
